syntax = "proto3";

option java_package = "com.bank.grpc";



//Service Definition
//Login/Logout - Unary gRPC
service user{
	rpc login(LoginRequest) returns (APIResponse);
	rpc logout(Empty) returns (APIResponse);
}

//Request Message
message LoginRequest{
	string username = 1;
	string password = 2;
}

// Response Message
message APIResponse{
	string responsemessage = 1;
	int32 responsecode = 2;
}

message Empty{
}



